# polo

./: README.md  main.py  pyproject.toml  requirements.txt
static/: chat.js  style.css
templates/: chat.html  login.html
